// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders correctly size medium 1`] = `
<DocumentFragment>
  .cache-rdc79q {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #151a2d;
  background-color: #d4dae7;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    class="egvl2gp0 cache-rdc79q"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly size rounded 1`] = `
<DocumentFragment>
  .cache-qt7dy3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #151a2d;
  background-color: #d4dae7;
  border-radius: 8px;
  font-size: 10px;
  height: 16px;
  padding: 2px 6px;
  text-transform: uppercase;
}

<span
    class="egvl2gp0 cache-qt7dy3"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly size small 1`] = `
<DocumentFragment>
  .cache-15uvhf0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #151a2d;
  background-color: #d4dae7;
  font-size: 12px;
  line-height: 24px;
  height: 24px;
}

<span
    class="egvl2gp0 cache-15uvhf0"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly size xsmall 1`] = `
<DocumentFragment>
  .cache-1jp69s7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #151a2d;
  background-color: #d4dae7;
  border-radius: 4px;
  font-size: 12px;
  line-height: 18px;
  height: 18px;
}

<span
    class="egvl2gp0 cache-1jp69s7"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly size xxsmall 1`] = `
<DocumentFragment>
  .cache-h73jke {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #151a2d;
  background-color: #d4dae7;
  border-radius: 4px;
  font-size: 10px;
  line-height: 16px;
  height: 16px;
  padding: 0 6px;
}

<span
    class="egvl2gp0 cache-h73jke"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant beta 1`] = `
<DocumentFragment>
  .cache-17vutqk {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #ff8c69;
  color: #ffffff;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="beta"
    class="egvl2gp0 cache-17vutqk"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant error 1`] = `
<DocumentFragment>
  .cache-16r5qw1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #dd3252;
  color: #ffffff;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="error"
    class="egvl2gp0 cache-16r5qw1"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant info 1`] = `
<DocumentFragment>
  .cache-140mm8v {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #3f6ed8;
  color: #ffffff;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="info"
    class="egvl2gp0 cache-140mm8v"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant light-beta 1`] = `
<DocumentFragment>
  .cache-dgtbtb {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #cc4e18;
  background-color: #ffefe6;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="beta"
    class="egvl2gp0 cache-dgtbtb"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant light-error 1`] = `
<DocumentFragment>
  .cache-lqz8xw {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #a6102d;
  background-color: #ffe1e7;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="error"
    class="egvl2gp0 cache-lqz8xw"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant light-info 1`] = `
<DocumentFragment>
  .cache-1qww9fs {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #1a4dbf;
  background-color: #e1ebff;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="info"
    class="egvl2gp0 cache-1qww9fs"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant light-neutral 1`] = `
<DocumentFragment>
  .cache-dhdxq8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #4a4f62;
  background-color: #f6f6f8;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    class="egvl2gp0 cache-dhdxq8"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant light-primary 1`] = `
<DocumentFragment>
  .cache-b5hapk {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #390171;
  background-color: #eeeeff;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    class="egvl2gp0 cache-b5hapk"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant light-success 1`] = `
<DocumentFragment>
  .cache-1dvyct7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #149a7b;
  background-color: #eafffb;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="success"
    class="egvl2gp0 cache-1dvyct7"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant neutral 1`] = `
<DocumentFragment>
  .cache-rdc79q {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #151a2d;
  background-color: #d4dae7;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    class="egvl2gp0 cache-rdc79q"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant primary 1`] = `
<DocumentFragment>
  .cache-y85sgz {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    class="egvl2gp0 cache-y85sgz"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant success 1`] = `
<DocumentFragment>
  .cache-13raz3x {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #22c8a2;
  color: #ffffff;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="success"
    class="egvl2gp0 cache-13raz3x"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant warning 1`] = `
<DocumentFragment>
  .cache-16r5qw1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #dd3252;
  color: #ffffff;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="warning"
    class="egvl2gp0 cache-16r5qw1"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-rdc79q {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #151a2d;
  background-color: #d4dae7;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    class="egvl2gp0 cache-rdc79q"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;
